--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ paginate_path: "page:num"
 ##The website description (to be used in meta tags)
 description: Put website description for your home page. (about 50 words or more)
 ##Some frequently used keywords on your website
-keywords: some, relevant, keywords, for, usage, in metatags
+keywords: livros, financas, investimentos, sucesso, negócios, in metatags
 
 ##define this for disqus comment support
 disqus: forumname
@@ -32,6 +32,6 @@ links:
   github: ealexbarros
 
 ##put desired image in img/ directory and set the value accordingly. If not defined, a placeholder image will be used.
-about_image: placeholder.jpg
+
 ##comment this if you want full width posts with no sidebar
-sidebar: on
+sidebar: off
