--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Livros Lidos em 2019
+description: Dicas de Livros
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
